[gd_scene load_steps=5 format=2]

[ext_resource path="res://2DGrid/VanishingPoint.gd" type="Script" id=1]
[ext_resource path="res://art/grabber_p.png" type="Texture" id=2]
[ext_resource path="res://art/grabber_h.png" type="Texture" id=3]
[ext_resource path="res://art/grabber.png" type="Texture" id=4]

[node name="VanishingPoint" type="Node2D"]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
width = 2.0
default_color = Color( 0.337255, 0.360784, 0.407843, 1 )

[node name="Line2D2" type="Line2D" parent="."]
points = PoolVector2Array( 354.183, 180.526 )
width = 2.0
default_color = Color( 0.337255, 0.360784, 0.407843, 1 )

[node name="TextureButton" type="TextureButton" parent="."]
modulate = Color( 0.517647, 0.517647, 0.517647, 1 )
margin_left = -16.0
margin_top = -16.0
margin_right = -8.0
margin_bottom = -8.0
action_mode = 0
keep_pressed_outside = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
